NLP TP's/texts/robotics/robotics.stackexchange_0000066375.txt
Q:

Problem when compile rgbdslam

When I compile the rgbdslam in indigo, I meet the problem as below.
Built target rgbdslam_generate_messages
[ 46%] Built target RosAria
[ 47%] [ 49%] [ 50%] [ 52%] Building CXX object rgbdslam/CMakeFiles/rgbdslam.dir/src/feature_adjuster.o
Building CXX object rgbdslam/CMakeFiles/rgbdslam.dir/src/sift_gpu_wrapper.o
Building CXX object rgbdslam/CMakeFiles/rgbdslam.dir/src/features.o
Building CXX object rgbdslam/CMakeFiles/rgbdslam.dir/src/aorb.o
/program/Pioneer/src/rgbdslam/src/feature_adjuster.cpp: In member function ‘virtual bool VideoGridAdaptedFeatureDetector::empty() const’:
/program/Pioneer/src/rgbdslam/src/feature_adjuster.cpp:203:14: error: ‘detector’ does not name a type
     for(auto detector : detectors){
              ^
/program/Pioneer/src/rgbdslam/src/feature_adjuster.cpp:206:5: error: expected ‘;’ before ‘return’
     return false;
     ^
/program/Pioneer/src/rgbdslam/src/feature_adjuster.cpp:206:5: error: expected primary-expression before ‘return’
/program/Pioneer/src/rgbdslam/src/feature_adjuster.cpp:206:5: error: expected ‘;’ before ‘return’
/program/Pioneer/src/rgbdslam/src/feature_adjuster.cpp:206:5: error: expected primary-expression before ‘return’
/program/Pioneer/src/rgbdslam/src/feature_adjuster.cpp:206:5: error: expected ‘)’ before ‘return’
make[2]: *** [rgbdslam/CMakeFiles/rgbdslam.dir/src/feature_adjuster.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [rgbdslam/CMakeFiles/rgbdslam.dir/all] Error 2
make: *** [all] Error 2
Invoking "make -j8 -l8" failed

Do any body have the same problem with me, how to fix it?

Originally posted by maxtom0 on ROS Answers with karma: 1 on 2015-03-13
Post score: -1

Original comments
Comment by kokirits on 2015-03-14:
As the wiki says, rgbd slam is for fuerte and rgbdslam v2 is for hydro (stated as beta).
Comment by kargas on 2015-06-05:
Hey buddy did u find out a solution for that problem?

A:

You could comment out the for loop with "auto detector" and replace with the following block.
 for(size_t i=0;i<detectors.size();++i)
 {
     if(detectors.at(i)->empty()) return true;
 }
 return false;

Let me know if this solution is ok for you.

Originally posted by kokirits with karma: 290 on 2015-06-08
This answer was ACCEPTED on the original site
Post score: 1

